demo/src/styles/demo.scss
$icon-font-path: '~videojs-font/fonts';
@import 'node_modules/video.js/src/css/video-js.scss';

@import '~/dist/clsp-videojs-plugin.css';

* {
  box-sizing: border-box;
}

html, body {
  width: 100%;
  height: 100%;
  border: 1px solid black;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  overflow: auto;
}

.video-js {
  width: 100%;
}

.tour,
.headless {
  display: none;
}

.page-header {
  display: flex;
  flex-shrink: 0;
  flex-grow: 0;
  align-items: center;
  padding: 10px;
  background: black;
  color: white;

  & > * {
    margin-right: 50px;
  }

  .controls {
    display: flex;
    flex-direction: column;

    & > * {
      margin: 5px 0;
    }

    #controls-toggle {
      padding: 20px;
    }
  }

  #wallSummary {
    display: flex;

    & > div {
      display: flex;
      flex-direction: column;
      padding: 5px 10px;

      &.labels {
        font-weight: bold;
        text-align: right;
      }

      span {
        margin: 5px;
      }
    }
  }
}

section {
  border: solid 3px black;
  padding: 5px;
  padding: 0;
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: auto;

  & > * {
    flex-shrink: 0;
    width: 100%;
  }

  &.wall {
    .controls {
      .wall-controls-container {
        & > div {
          margin: 20px;
        }

        #walltest {
          padding: 20px;
        }
      }
    }

    #videowall {
      & > table {
        width: 100%;
        display: flex;

        tbody {
          width: 100%;

          tr {
            width: 100%;
            display: flex;

            td {
              width: 25%;
              display: flex;
              overflow: hidden;
            }
          }
        }
      }
    }

    .wall-video-container {
      border: 2px solid black;
      width: 100%;

      .video-stream {
        display: flex;
        align-items: center;
        padding: 10px;
        text-align: center;
        background-color: black;
        color: white;

        .url {
          padding: 0 0.5rem;
          text-overflow: ellipsis;
          overflow: hidden;
        }

        .close {
          background-color: red;
          border-color: red;
          font-size: 1rem;
          font-weight: bold;
        }
      }

      .video-metrics {
        display: flex;
        flex-direction: column;

        .metric {
          display: flex;

          &:nth-of-type(2n) {
            background: lightgrey;
          }

          .value {
            width: 5rem;
            overflow: hidden;
            flex-grow: 0;
            flex-shrink: 0;
            padding: 0 3px;
            font-weight: bold;
          }

          .type {
            flex-grow: 1;
            flex-shrink: 0;
            text-align: left;
            overflow: hidden;
          }
        }
      }
    }
  }

  & > .controls {
    display: flex;
  }
}

